Add lint rule to prefer suite.Run for subtests

--- a/src/.golangci.yml
+++ b/src/.golangci.yml
@@ -44,6 +44,9 @@ linters-settings:
       - '(errors|fmt)\.(New|Stack|Wrap|Error)f?\((# error handling should use clues pkg)?'
       # Avoid Warn-level logging in favor of Info or Error.
       - 'Warn[wf]?\((# logging should use Info or Error)?'
+      # Prefer suite.Run(name, func() {}) for subtests as testify has it instead
+      # of suite.T().Run(name, func(t *testing.T) {}).
+      - 'T\(\)\.Run(# prefer testify subtest Run(name, func()) function )?'
   lll:
     line-length: 120
   revive:
