--- a/.github/actions/purge-m365-user-data/action.yml
+++ b/.github/actions/purge-m365-user-data/action.yml
@@ -27,7 +27,11 @@ inputs:
     description: Secret value of for AZURE_CLIENT_SECRET
   azure-tenant-id:
     description: Secret value of for AZURE_TENANT_ID
-    
+  m365-admin-user:
+    description: Secret value of for M365TENANT_ADMIN_USER
+  m365-admin-password:
+    description: Secret value of for M365TENANT_ADMIN_PASSWORD
+
 runs:
   using: composite
   steps:
@@ -54,7 +58,7 @@ runs:
         ./setRetention.ps1
 
     - name: Run the static purge script set
-      if: ${{ inputs.folder-prefix == '' }}
+      if: ${{ inputs.folder-prefix == '' && inputs.user != '' }}
       shell: pwsh
       working-directory: ./src/cmd/purge/scripts
       env:
