Improved CI cleanup script (#2851)
Improved this significantly based on some learnings from trying to get this in better shape
* Reduce folder enumerations significantly
* Address issue when cleanup gets backlogged and cannot enumerate all items to clean in a single job
* Remove the need to launch one job per prefix or folder name
* The only way to clean /Audits reliably seems to be emptying (with hard delete) of /Revoverable Items (parent of Audits)
* Eliminated need to control concurrency and overhead of job spin up
* Attempt to set explicit network timeout for SOAP calls to prevent long hangs being observed

NOTE: This change affect both cleanup script and the corresponding GHA workflow
---

#### Does this PR need a docs update or release note?

- [ ] :white_check_mark: Yes, it's included
- [ ] :clock1: Yes, but in a later PR
- [x] :no_entry: No

#### Type of change

<!--- Please check the type of change your PR introduces: --->
- [ ] :sunflower: Feature
- [ ] :bug: Bugfix
- [ ] :world_map: Documentation
- [ ] :robot: Test
- [x] :computer: CI/Deployment
- [ ] :broom: Tech Debt/Cleanup

#### Issue(s)

#### Test Plan

<!-- How will this be tested prior to merging.-->
- [x] :muscle: Manual
- [ ] :zap: Unit test
- [ ] :green_heart: E2E

--- a/.github/actions/purge-m365-user-data/action.yml
+++ b/.github/actions/purge-m365-user-data/action.yml
@@ -9,10 +9,9 @@ name: Purge M365 User Data
 #
 # The script focuses on the cleaning up the following:
 # * All folders, descending from the exchange root, of a given prefix.
-# * All folders in PersonMetadata 
+# * All folders in PersonMetadata
 # * All already soft-deleted items
-# * All recoverable items in Audits
-# * All recoverable items in Purges
+# * All folders under recoverable items
 
 inputs:
   user:
@@ -35,20 +34,19 @@ inputs:
 runs:
   using: composite
   steps:
-
-    - name: Run the folder-matrix purge script set
-      if: ${{ inputs.folder-prefix != '' }}
+    - name: Run the all purge scripts for user
+      if: ${{ inputs.user != '' }}
       shell: pwsh
       working-directory: ./src/cmd/purge/scripts
-      env: 
+      env:
         AZURE_CLIENT_ID: ${{ inputs.azure-client-id }}
         AZURE_CLIENT_SECRET: ${{ inputs.azure-client-secret }}
         AZURE_TENANT_ID: ${{ inputs.azure-tenant-id }}
       run: |
-        ./foldersAndItems.ps1 -WellKnownRoot root -User ${{ inputs.user }} -FolderPrefixPurge ${{ inputs.folder-prefix }} -FolderBeforePurge ${{ inputs.older-than }}
+        ./foldersAndItems.ps1 -User ${{ inputs.user }} -FolderNamePurgeList PersonMetadata --FolderPrefixPurgeList ${{ inputs.folder-prefix }} -PurgeBeforeTimestamp ${{ inputs.older-than }}
 
     - name: Reset retention for all mailboxes to 0
-      if: ${{ inputs.folder-prefix == '' && inputs.user == '' }}
+      if: ${{ inputs.user == '' }}
       shell: pwsh
       working-directory: ./src/cmd/purge/scripts
       env:
@@ -57,25 +55,9 @@ runs:
       run: |
         ./setRetention.ps1
 
-    - name: Run the static purge script set
-      if: ${{ inputs.folder-prefix == '' && inputs.user != '' }}
-      shell: pwsh
-      working-directory: ./src/cmd/purge/scripts
-      env:
-        AZURE_CLIENT_ID: ${{ inputs.azure-client-id }}
-        AZURE_CLIENT_SECRET: ${{ inputs.azure-client-secret }}
-        AZURE_TENANT_ID: ${{ inputs.azure-tenant-id }}
-      # powershell doesn't like multiline commands, each of these must be on a single line
-      run: |
-        ./foldersAndItems.ps1 -WellKnownRoot root -User ${{ inputs.user }} -FolderNamePurge PersonMetadata 
-        ./foldersAndItems.ps1 -WellKnownRoot deleteditems -User ${{ inputs.user }} 
-        ./foldersAndItems.ps1 -WellKnownRoot recoverableitemsroot -User ${{ inputs.user }} -FolderNamePurge Audits 
-        ./foldersAndItems.ps1 -WellKnownRoot recoverableitemsroot -User ${{ inputs.user }} -FolderNamePurge Purges
-        ./foldersAndItems.ps1 -WellKnownRoot recoverableitemsroot -User ${{ inputs.user }} -FolderNamePurge Deletions
-
     - name: Run the old purge script to clear out onedrive buildup
       working-directory: ./src
-      if: ${{ inputs.folder-prefix != '' }}
+      if: ${{ inputs.folder-prefix != '' && inputs.user != ''}}
       shell: sh
       env:
         AZURE_CLIENT_ID: ${{ inputs.azure-client-id }}
