update sanity test for new cli output

--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -192,15 +192,17 @@ jobs:
           set -euo pipefail
           ./corso backup create onedrive \
           --user "${CORSO_M365_TEST_USER_ID}" \
-          --hide-progress 2>&1 | tee $TEST_RESULT/backup_onedrive.txt 
+          --hide-progress  --json 2>&1 | tee $TEST_RESULT/backup_onedrive.txt 
 
-          if ! grep -q 'Completed' $TEST_RESULT/backup_onedrive.txt
-          then
+          resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_onedrive.txt ) 
+
+          if  [[ $( echo $resultjson | jq -r '.[0] | .errorCount') -ne 0 ]]; then
               echo "backup was not successfull"
               exit 1
           fi
 
-          echo result=$(grep 'Completed' $TEST_RESULT/backup_onedrive.txt  | awk '{print $2}') >> $GITHUB_OUTPUT
+          data=$( echo $resultjson | jq -r '.[0] | .id' )
+          echo result=$data >> $GITHUB_OUTPUT
 
       # list the bakcup onedrive
       - name: Backup onedrive list test
@@ -237,16 +239,18 @@ jobs:
           set -euo pipefail
           ./corso backup create onedrive \
           --user "${CORSO_M365_TEST_USER_ID}"\
-           --hide-progress 2>&1 | tee $TEST_RESULT/backup_onedrive_incremental.txt 
+           --hide-progress  --json 2>&1 | tee $TEST_RESULT/backup_onedrive_incremental.txt 
           
-          if ! grep -q 'Completed' $TEST_RESULT/backup_onedrive_incremental.txt
-          then
+          resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_onedrive_incremental.txt ) 
+
+          if  [[ $( echo $resultjson | jq -r '.[0] | .errorCount') -ne 0 ]]; then
               echo "backup was not successfull"
               exit 1
           fi
 
-          echo result=$(grep -i -e 'Completed' $TEST_RESULT/backup_onedrive_incremental.txt  | awk '{print $2}') >> $GITHUB_OUTPUT
-
+          data=$( echo $resultjson | jq -r '.[0] | .id' )
+          echo result=$data >> $GITHUB_OUTPUT
+          
       # test onedrive restore
       - name: Backup onedrive restore
         id: onedrive-incremental-restore-test
