--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -76,8 +76,8 @@ jobs:
 
           if ! grep -q 'Initialized a S3 repository within bucket' $TEST_RESULT/initrepo.txt 
           then
-              echo "repo could not be initiated"
-              exit 1
+            echo "repo could not be initiated"
+            exit 1
           fi
           
           echo result="$prefix" >> $GITHUB_OUTPUT 
@@ -93,8 +93,8 @@ jobs:
 
           if ! grep -q 'Connected to S3 bucket' $TEST_RESULT/connect.txt 
           then
-              echo "repo could not be connected"
-              exit 1
+            echo "repo could not be connected"
+            exit 1
           fi
 
       # run the tests
@@ -103,21 +103,21 @@ jobs:
         run: |
           ./corso backup create exchange \
           --user "${CORSO_M365_TEST_USER_ID}" \
-           --hide-progress \
-           --json \
-           2>&1 | tee $TEST_RESULT/backup_exchange.txt 
+          --hide-progress \
+          --json \
+          2>&1 | tee $TEST_RESULT/backup_exchange.txt 
 
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_exchange.txt ) 
 
           if  [[ $( echo $resultjson | jq -r '.[0] | .errorCount') -ne 0 ]]; then
-              echo "backup was not successfull"
-              exit 1
+            echo "backup was not successful"
+            exit 1
           fi
 
           data=$( echo $resultjson | jq -r '.[0] | .id' )
           echo result=$data >> $GITHUB_OUTPUT
 
-      # list all exhange backups
+      # list all exchange backups
       - name: Backup exchange list test
         run: |
           set -euo pipefail
@@ -127,23 +127,23 @@ jobs:
 
           if ! grep -q  ${{ steps.exchange-test.outputs.result }} $TEST_RESULT/backup_exchange_list.txt 
           then
-              echo "listing of backup was not successfull"
-              exit 1
+            echo "listing of backup was not successful"
+            exit 1
           fi
 
-      # list the previous exhange backups
-      - name: Backup exchange list test
+      # list the previous exchange backups
+      - name: Backup exchange list single backup test
         run: |
           set -euo pipefail
           ./corso backup list exchange \
           --hide-progress \
           --backup "${{ steps.exchange-test.outputs.result }}" \
-          2>&1 | tee $TEST_RESULT/backup_exchange_list.txt
+          2>&1 | tee $TEST_RESULT/backup_exchange_list_single.txt
 
           if ! grep -q  ${{ steps.exchange-test.outputs.result }} $TEST_RESULT/backup_exchange_list.txt 
           then
-              echo "listing of backup was not successfull"
-              exit 1
+            echo "listing of backup was not successful"
+            exit 1
           fi
 
       # test exchange restore
@@ -165,7 +165,7 @@ jobs:
           set -euo pipefail
           ./sanityCheck
 
-      # test incremental backup exhange
+      # test incremental backup exchange
       - name: Backup exchange incremental
         id: exchange-incremental-test
         run: |
@@ -173,15 +173,14 @@ jobs:
           ./corso backup create exchange \
           --hide-progress \
           --user "${CORSO_M365_TEST_USER_ID}" \
-          --hide-progress \
           --json \
           2>&1 | tee $TEST_RESULT/backup_exchange_incremental.txt 
 
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_exchange_incremental.txt ) 
 
           if  [[ $( echo $resultjson | jq -r '.[0] | .errorCount') -ne 0 ]]; then
-              echo "backup was not successfull"
-              exit 1
+            echo "backup was not successful"
+            exit 1
           fi
 
           echo result=$( echo $resultjson | jq -r '.[0] | .id' ) >> $GITHUB_OUTPUT
@@ -216,15 +215,14 @@ jobs:
           ./corso backup create onedrive \
           --hide-progress \
           --user "${CORSO_M365_TEST_USER_ID}" \
-          --hide-progress  \
           --json \
           2>&1 | tee $TEST_RESULT/backup_onedrive.txt 
 
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_onedrive.txt ) 
 
           if  [[ $( echo $resultjson | jq -r '.[0] | .errorCount') -ne 0 ]]; then
-              echo "backup was not successfull"
-              exit 1
+            echo "backup was not successful"
+            exit 1
           fi
 
           data=$( echo $resultjson | jq -r '.[0] | .id' )
@@ -240,8 +238,8 @@ jobs:
 
           if ! grep -q  ${{ steps.onedrive-test.outputs.result }} $TEST_RESULT/backup_onedrive_list.txt 
           then
-              echo "listing of backup was not successfull"
-              exit 1
+            echo "listing of backup was not successful"
+            exit 1
           fi
 
       # list the previous onedrive backup
@@ -251,12 +249,12 @@ jobs:
           ./corso backup list onedrive \
           --hide-progress \
           --backup "${{ steps.onedrive-test.outputs.result }}" \
-          2>&1 | tee $TEST_RESULT/backup_onedrive_list.txt 
+          2>&1 | tee $TEST_RESULT/backup_onedrive_list_single.txt
 
           if ! grep -q  ${{ steps.onedrive-test.outputs.result }} $TEST_RESULT/backup_onedrive_list.txt 
           then
-              echo "listing of backup was not successfull"
-              exit 1
+            echo "listing of backup was not successful"
+            exit 1
           fi
 
       # test onedrive restore
@@ -286,15 +284,14 @@ jobs:
           ./corso backup create onedrive \
           --hide-progress \
           --user "${CORSO_M365_TEST_USER_ID}"\
-           --hide-progress \
-           --json \
-           2>&1 | tee $TEST_RESULT/backup_onedrive_incremental.txt 
+          --json \
+          2>&1 | tee $TEST_RESULT/backup_onedrive_incremental.txt 
           
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_onedrive_incremental.txt ) 
 
           if  [[ $( echo $resultjson | jq -r '.[0] | .errorCount') -ne 0 ]]; then
-              echo "backup was not successfull"
-              exit 1
+            echo "backup was not successful"
+            exit 1
           fi
 
           data=$( echo $resultjson | jq -r '.[0] | .id' )
