--- a/.github/workflows/ci_test_cleanup.yml
+++ b/.github/workflows/ci_test_cleanup.yml
@@ -30,7 +30,7 @@ jobs:
           user: ${{ secrets[matrix.user] }}
           site: ${{ secrets.CORSO_M365_TEST_SITE_URL}}
           folder-prefix: "Corso_Restore_, TestRestore, testfolder, incrementals_ci_, Alcion_Restore_"
-          libraries: ${{ secrets.CORSO_M365_TEST_SITE_LIBRARIES }}
+          libraries: ${{ env.CORSO_M365_TEST_SITE_LIBRARIES }}
           older-than: ${{ env.HALF_HOUR_AGO }}
           azure-client-id: ${{ secrets.CLIENT_ID }}
           azure-client-secret: ${{ secrets.CLIENT_SECRET }}
