Remove usages of ::set-output in Github Actions
This has be deprecated in favor of a new format.
https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/

--- a/.github/actions/go-setup-cache/action.yml
+++ b/.github/actions/go-setup-cache/action.yml
@@ -37,8 +37,7 @@ runs:
     - name: Determine Golang cache paths
       id: golang-path
       run: |
-        echo "::set-output name=build::$(go env GOCACHE)"
-        echo "::set-output name=module::$(go env GOMODCACHE)"
+        echo "build=$(go env GOCACHE)" | tee -a $GITHUB_OUTPUT
       shell: bash
 
     - name: Setup Golang cache
