--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,6 +218,7 @@ jobs:
           -v            \
           -failfast     \
           -p 1          \
+          -timeout 15m  \
           ./... 2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
 
       # Upload the original go test output as an artifact for later review.
@@ -269,6 +270,7 @@ jobs:
           -v            \
           -failfast     \
           -p 1          \
+          -timeout 15m  \
           ./... 2>&1 | tee ./testlog/gotest-unit.log | gotestfmt -hide successful-tests
 
       # Upload the original go test output as an artifact for later review.
@@ -354,6 +356,7 @@ jobs:
           go test \
           -json   \
           -v      \
+          -timeout 15m  \
           ./... 2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
 
       # Upload the original go test log as an artifact for later review.
