--- a/.github/actions/go-setup-cache/action.yml
+++ b/.github/actions/go-setup-cache/action.yml
@@ -37,8 +37,8 @@ runs:
     - name: Determine Golang cache paths
       id: golang-path
       run: |
-        echo "::set-output name=build::$(go env GOCACHE)"
-        echo "::set-output name=module::$(go env GOMODCACHE)"
+        echo "build=$(go env GOCACHE)" | tee -a $GITHUB_OUTPUT
+        echo "module=$(go env GOMODCACHE)" | tee -a $GITHUB_OUTPUT
       shell: bash
 
     - name: Setup Golang cache
