--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,76 +152,8 @@ jobs:
           version: ${{ needs.SetEnv.outputs.version }}
 
   # ----------------------------------------------------------------------------------------------------
-  # --- Integration and Unit Testing -------------------------------------------------------------------
+  # --- Unit Testing -------------------------------------------------------------------
   # ----------------------------------------------------------------------------------------------------
-
-  Test-Suite-Trusted:
-    needs: [Precheck, Checkout, SetM365App]
-    environment: Testing
-    runs-on: ubuntu-latest
-    if: (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main') || (needs.precheck.outputs.srcfileschanged == 'true' && github.event.pull_request.head.repo.full_name == github.repository)
-    defaults:
-      run:
-        working-directory: src
-    env:
-      # Resolve the name of the secret that contains the Azure client ID/secret
-      AZURE_CLIENT_ID_NAME: ${{ needs.SetM365App.outputs.client_id_env }}
-      AZURE_CLIENT_SECRET_NAME: ${{ needs.SetM365App.outputs.client_secret_env }}
-      CLIENT_APP_SLOT: ${{ needs.SetM365App.outputs.client_app_slot }}
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Golang with cache
-        uses: magnetikonline/action-golang-cache@v4
-        with:
-          go-version-file: src/go.mod
-
-      - run: mkdir testlog
-
-      # Install gotestfmt
-      - name: Set up gotestfmt
-        run: go install github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt@latest
-
-      # AWS creds
-      - name: Configure AWS credentials from Test account
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
-          role-session-name: integration-testing
-          aws-region: us-east-1
-
-      # run the tests
-      - name: Integration Tests
-        env:
-          AZURE_CLIENT_ID: ${{ secrets[env.AZURE_CLIENT_ID_NAME] }}
-          AZURE_CLIENT_SECRET: ${{ secrets[env.AZURE_CLIENT_SECRET_NAME] }}
-          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
-          CORSO_CI_TESTS: true
-          CORSO_M365_TEST_USER_ID: ${{ secrets.CORSO_M365_TEST_USER_ID }}
-          CORSO_SECONDARY_M365_TEST_USER_ID: ${{ secrets.CORSO_SECONDARY_M365_TEST_USER_ID }}
-          CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
-          CORSO_LOG_FILE: ./src/testlog/testlogging.log
-          LOG_GRAPH_REQUESTS: true
-        run: |
-          set -euo pipefail
-          go test       \
-          -tags testing \
-          -json         \
-          -v            \
-          -failfast     \
-          -p 1          \
-          -timeout 15m  \
-          ./... 2>&1 | tee ./testlog/gotest.log | gotestfmt -hide successful-tests
-
-      # Upload the original go test output as an artifact for later review.
-      - name: Upload test log
-        if: failure()
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-log
-          path: src/testlog/*
-          if-no-files-found: error
-          retention-days: 14
 
   Unit-Test-Suite:
     needs: [Precheck, Checkout]
