--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -122,7 +122,8 @@ jobs:
           --user "${CORSO_M365_TEST_USER_ID}" \
            --hide-progress \
            --data 'email' \
-            --json 2>&1 | tee $TEST_RESULT/backup_exchange.txt 
+            --json \
+            2>&1 | tee $TEST_RESULT/backup_exchange.txt 
 
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_exchange.txt ) 
 
@@ -172,7 +173,6 @@ jobs:
           --email-folder ${{ steps.repo-init.outputs.result }} \
           --hide-progress \
           --backup "${{ steps.exchange-test.outputs.result }}" \
-
           2>&1 | tee $TEST_RESULT/exchange-restore-test.txt
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/exchange-restore-test.txt | sed "s/Restoring to folder//" )  >> $GITHUB_OUTPUT
         
